--- a/index.html
+++ b/index.html
@@ -11,18 +11,27 @@
 </head>
 
 <body>
-    <div  id="top-page"  >
-    <header>
+    <!-- Font-pagina -->
+    <header id="main-front">
         <img src="images/Logo.png" alt="logo toboo" id="logo">
         <h1 id="page-title">Toboolist</h1>
     </header>
-    </div>
+    
    <main>
        <div class="container" id="page-core">
-        <button id="new-task-button"><span class="small-text">Add Task</span></button>
-        <button id="new-section-button"><span>Add Section</span></button>
+           <!-- action -->
+        <section>
+            <div class="top-side">
+                <button id="new-task-button" ><span class="actions">Add Task</span></button>
+                <button id="new-section-button" ><span class="actions">Add Section</span></button>
+            </div>
+
+        </section>
+
+        <!-- tasks -->
        </div>
-       <hr>
+
+       
    </main>
    <footer></footer> 
 
