--- a/index.html
+++ b/index.html
@@ -19,16 +19,42 @@
     
    <main>
        <div class="container" id="page-core">
-           <!-- action -->
+           <!-- actions -->
         <section>
             <div class="top-side">
                 <button id="new-task-button" ><span class="actions">Add Task</span></button>
                 <button id="new-section-button" ><span class="actions">Add Section</span></button>
             </div>
-
         </section>
 
         <!-- tasks -->
+        <section class="tasks">
+            <ul>
+                <li>
+                    <ul>
+                        <li>
+                            <span>&#11206;</span><h1>New Task</h1>
+                        </li>
+                        <li>
+                           <span class="status done" >&#10003;</span> Quarterly Newsletter <span class="task-description blue">Editorial</span>
+                        </li>
+
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                       <li>
+                           <span>&#11206;</span><h1>Today</h1>
+                        </li> 
+                        <li>
+                            <span class="status done" >&#10003;</span>Recruiting blog Post <span class="task-description purple">Q1 Goals</span>
+                        </li>
+                    </ul>
+                </li>
+                <li></li>
+            </ul>
+        </section>
+
        </div>
 
        
