--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
    <main>
        <div class="container" id="page-core">
            <!-- actions -->
-        <section>
-            <div class="top-side">
-                <button id="new-task-button" ><span class="actions">Add Task</span></button>
-                <button id="new-section-button" ><span class="actions">Add Section</span></button>
+            <div class="top-section">
+                <div class="top-side ">
+                    <button id="new-task-button" ><span class="actions">Add Task</span></button>
+                    <button id="new-section-button" ><span class="actions">Add Section</span></button>
+                </div>
             </div>
-        </section>
 
         <!-- tasks -->
         <section class="tasks">
@@ -33,7 +33,7 @@
                 <li>
                     <ul>
                         <li>
-                            <span>&#11206;</span><h1>New Task</h1>
+                            <span>&#11206;</span><h2>New Task</h2>
                         </li>
                         <li>
                            <span class="status done" >&#10003;</span> Quarterly Newsletter <span class="task-description blue">Editorial</span>
@@ -44,14 +44,37 @@
                 <li>
                     <ul>
                        <li>
-                           <span>&#11206;</span><h1>Today</h1>
+                           <span>&#11206;</span><h2>Today</h2>
                         </li> 
                         <li>
-                            <span class="status done" >&#10003;</span>Recruiting blog Post <span class="task-description purple">Q1 Goals</span>
+                            <span class="status done" >&#10003;</span>Recruiting blog Post <span class="task-description blue">Editorial</span>
+                        </li>
+                        <li>
+                            <span class="status done" >&#10003;</span>Mobile App Launch <span class="task-description purple">Q1 Goals</span> 
+                        </li>
+                        <li>
+                            <span class="status undone" >&#128500;</span>Interview with Jhon H.<span class="task-description green">Recruiting</span> 
+                        </li>
+                        <li>
+                            <span class="status done" >&#10003;</span>Submit updates to mobile storefronts<span class="task-description orange">Mobile</span> 
                         </li>
                     </ul>
                 </li>
-                <li></li>
+                <li>
+                    <span>&#11206;</span><h2>Upcoming</h2>
+                 </li> 
+                 <li>
+                    <span class="status undone" >&#128500;</span>Schedule meeting with Alex<span class="task-description orange">Mobile</span> 
+                 </li>
+                 <li>
+                     <span class="status done" >&#10003;</span>Homepage Refresh<span class="task-description pink">Website</span> 
+                 </li>
+                 <li>
+                    <span class="status done" >&#10003;</span>Onboard new sales team Members<span class="task-description lightgreen">Sales</span> 
+                 </li>
+                 <li>
+                     <span class="status done" >&#10003;</span>Review editorial calendar<span class="task-description blue">Editorial</span> 
+                 </li>
             </ul>
         </section>
 
@@ -59,7 +82,7 @@
 
        
    </main>
-   <footer></footer> 
+   
 
 </body>
 </html>
